<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lepetit.com.myfirstapp.MainActivity">

    <GridLayout
        android:id="@+id/KeyBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultScreen"
            android:textSize="40dp"
            android:gravity="center_vertical|right"
            android:textColor="@color/black"
            android:singleLine="true"
            android:ellipsize="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:layout_rowWeight="2" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/clear"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/divid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/divid"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/multiply"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/delete"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/seven"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/eight"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/nine"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/minus"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/four"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/five"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/six"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:textColor="@color/colorEqualBackground"
            android:background="@color/colorFunctionBackground"
            android:text="@string/plus"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/one"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/two"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/three"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_columnWeight="2"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:layout_rowWeight="2"
            android:textColor="@color/colorNumberBackground"
            android:background="@color/colorEqualBackground"
            android:text="@string/equal"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/percent"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/zero"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:background="@color/colorNumberBackground"
            android:text="@string/point"
            android:textSize="20dp"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>
